Project

General

Profile

Actions

Bug #42826

closed

mds: client does not response to cap revoke After session stale->resume circle

Added by Zheng Yan over 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Q/A
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client, MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

/a/pdonnell-2019-11-11_21:12:02-multimds-wip-pdonnell-testing-20191111.154849-distro-basic-smithi/4497461


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #43342: mimic: mds: client does not response to cap revoke After session stale->resume circleRejectedActions
Copied to CephFS - Backport #43343: nautilus: mds: client does not response to cap revoke After session stale->resume circleResolvedNathan CutlerActions
Actions #1

Updated by Zheng Yan over 4 years ago

  • Status changed from New to Fix Under Review
  • Backport set to nautilus,mimic
  • Pull request ID set to 31662
Actions #2

Updated by Patrick Donnelly over 4 years ago

  • Assignee set to Zheng Yan
  • Target version set to v15.0.0
  • Start date deleted (11/15/2019)
  • Source set to Q/A
  • Component(FS) Client, MDS added
Actions #3

Updated by Patrick Donnelly over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43342: mimic: mds: client does not response to cap revoke After session stale->resume circle added
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43343: nautilus: mds: client does not response to cap revoke After session stale->resume circle added
Actions #6

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF